--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209005/FlowDoneDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209005/FlowDoneDetail.html
@@ -97,7 +97,25 @@
                     <div class="upload-img-list"></div>
                 </div>
             </div>
+            <div class="mui-input-row">
+                <label>是否需要开票</label>
+                <textarea rows="2" id="fif_kp" readonly></textarea>
+            </div>
+            <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
+                <div class="border border-t upload-img" style="top:0rem;">
+                    <!--上传图片-->
+                    <div class="clearfix upload-btn" id="children-bg">
+                        <label class="label">开票信息附件<i style="color:red;">*</i></label>
+                        <span class="tips" id="imageCount"><!--已添加0张--></span>
+                        <!--上传图片按钮  -->
+                        <span class="upload-addbtn" style="display:none;">
+                            <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
+                        </span>
 
+                    </div>
+                    <div class="upload-img-list2"></div>
+                </div>
+            </div>
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>销售资料</label>
             </div>
