--- a/BPMMobile/Pages/01WeGoHQ/01KuaZhanYe/XX0101003/FlowUndoDetail.html
+++ b/BPMMobile/Pages/01WeGoHQ/01KuaZhanYe/XX0101003/FlowUndoDetail.html
@@ -808,22 +808,22 @@
             mx.fdw = fdw;
             mx.famount = famount;
             mx.fprice = fprice;
-            if (!fname) {
-                mui.toast('请填写名称');
-                return null;
-            }
-            if (!fmodel) {
-                mui.toast('请填写规格型号');
-                return null;
-            }
-            if (!fqty) {
-                mui.toast('请填写数量');
-                return null;
-            }
-            if (!fdw) {
-                mui.toast('请填写单位');
-                return null;
-            }
+            //if (!fname) {
+            //    mui.toast('请填写名称');
+            //    return null;
+            //}
+            //if (!fmodel) {
+            //    mui.toast('请填写规格型号');
+            //    return null;
+            //}
+            //if (!fqty) {
+            //    mui.toast('请填写数量');
+            //    return null;
+            //}
+            //if (!fdw) {
+            //    mui.toast('请填写单位');
+            //    return null;
+            //}
             return mx;
         }
         function showGoods() {
