--- a/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowUndoDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowUndoDetail.html
@@ -17,95 +17,87 @@
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
-            <div class="mui-input-row">
-                <label>申请人</label>
-                <input type="text" id="fname" readonly />
-            </div>
-            <div class="mui-input-row">
-                <label>申请部门<i style="color:red;">*</i></label>
-                <input type="text" id="fdept" readonly />
-            </div>
-            <div class="mui-input-row">
-                <label>申请日期<i style="color:red;">*</i></label>
-                <input type="date" id="fdate" readonly />
-            </div>
-            <div class="mui-input-row">
-                <label>是否借款</label>
-                <input type="hidden" id="fif_jk" readonly value="否" />
-                <div class="mui-switch mui-switch-blue mui-switch-mini mui-disabled" id="fif_jkd">
-                    <div class="mui-switch-handle"></div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>申请人</label>
+                    <textarea rows="2" id="fsqr" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>所属区域</label>
+                    <textarea rows="2" id="fssqy" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>申请日期</label>
+                    <textarea rows="2" id="fsqrq" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>联系电话</label>
+                    <textarea rows="2" id="flxdh" readonly></textarea>
                 </div>
             </div>
-            <div id="fjkcard" style="display:none;">
-                <div class="mui-card">
-                    <div class="mui-row cutOffLine" style="padding:2vw;">
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>借款金额<i style="color:red;">*</i></label>
-                            <input type="number" id="fjkje" placeholder="请填写" />
-                        </div>
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>借款金额大写</label>
-                            <input type="text" id="fjkje_dx" placeholder="请填写" />
-                        </div>
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>借款单号</label>
-                            <input type="text" id="fjkdh" readonly />
-                        </div>
-                    </div>
-                    <div class="mui-row cutOffLine" style="padding:2vw;">
-                        <div class="mui-col-xs-12" style="display:flex;">
-                            <label>借款用途<i style="color:red;">*</i></label>
-                            <textarea rows="3" id="fjkyt" placeholder="请填写"></textarea>
-                        </div>
-                    </div>
-                    <div class="mui-input-row cutOffLine" style="height:7rem;overflow:scroll;" id="uploaddiv">
-                        <div class="border border-t upload-img" style="top:0rem;">
-                            <!--上传图片-->
-                            <div class="clearfix upload-btn" id="children-bg">
-                                <label class="label">附件</label>
-                                <span class="tips" id="imageCount"><!--已添加0张--></span>
-                                <!--上传图片按钮  -->
-                                <span class="upload-addbtn">
-                                    <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
-                                </span>
 
-                            </div>
-                            <div class="upload-img-list"></div>
-                        </div>
-                    </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>是否500元以上<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fif_500" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>客户编码</label>
+                    <textarea rows="2" id="fkhbm" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>客户名称</label>
+                    <textarea rows="2" id="fkhmc" readonly></textarea>
                 </div>
             </div>
-            <div class="mui-row itemtitle2" style="padding:2vw;">
-                <div class="mui-col-xs-12" style="text-align:center;">
-                    <label>支出计划明细</label>
-                </div>
 
-            </div>
-            <div class="mui-row cutOffLine">
-                <div class="mui-col-xs-6" style="padding:1vw;">
-                    <label>合计金额</label>
-                    <input type="number" id="fhj_je" readonly />
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>申请说明</label>
+                    <textarea rows="2" id="fsqsm" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-6" style="padding:1vw;">
-                    <label>合计大写</label>
-                    <input type="text" id="fhj_je_dx" readonly />
+            </div>
+
+            <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
+                <div class="border border-t upload-img" style="top:0rem;">
+                    <!--上传图片-->
+                    <div class="clearfix upload-btn" id="children-bg">
+                        <label class="label">附件</label>
+                        <span class="tips" id="imageCount"><!--已添加0张--></span>
+                        <!--上传图片按钮  -->
+                        <span class="upload-addbtn" style="display:none;">
+                            <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
+                        </span>
+
+                    </div>
+                    <div class="upload-img-list"></div>
+                </div>
+            </div>
+
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>申请明细</label>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计数量</label>
+                    <textarea rows="2" id="fsl_all" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计价格</label>
+                    <textarea rows="2" id="fjg_all" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计小计</label>
+                    <textarea rows="2" id="fxj_all" readonly></textarea>
                 </div>
             </div>
             <div id="mxlist">
 
             </div>
-            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx_sq" style="margin-top:0.5rem;display:none;">
-                支出计划明细
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
+                添加申请明细
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
-            <input type="hidden" id="fno" placeholder="申请人工号" />
-            <input type="hidden" id="fbmjl" placeholder="部门经理" />
-            <input type="hidden" id="ffgld" placeholder="分管领导" />
-            <input type="hidden" id="fcwshr" placeholder="财务审核人" />
-            <input type="hidden" id="fspr" placeholder="总经理" />
-            <input type="hidden" id="ps" placeholder="PS岗位" />
-            <input type="hidden" id="fsqrzw" placeholder="申请人职位" />
-            <input type="hidden" id="flczt" placeholder="流程状态" />
             <div class="mui-input-row" id="csd">
                 <label>加签</label>
                 <div class="mui-switch mui-switch-blue" id="csswitch">
@@ -181,8 +173,6 @@
             <button class="mui-btn mui-btn-primary" type="button" id="readbt" onclick="hasRead()">已阅</button>
         </div>
     </div>
-
-
     <input value="" id="stepId" name="stepId" type="hidden" />
     <input type="hidden" id="flowPerId" name="flowPerId" value="" />
     <input type="hidden" id="processName" name="processName" value="" />
