--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/BG0209004/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/BG0209004/FlowCreate.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="mui-col-xs-3" style="display:flex;">
                             <label>部门<i style="color:red;">*</i></label>
-                            <textarea rows="2" id="fbm" readonly></textarea>
+                            <textarea rows="2" id="fbm" ></textarea>
                         </div>
                         <div class="mui-col-xs-3" style="display:flex;">
                             <label>职位<i style="color:red;">*</i></label>
