--- a/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowAskDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowAskDetail.html
@@ -20,42 +20,42 @@
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>提报人</label>
-                    <textarea rows="2" id="ftbr" readonly></textarea>
+                    <label>申请人</label>
+                    <textarea rows="2" id="fsqr" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>订单类型</label>
-                    <textarea rows="2" id="fddlx" readonly></textarea>
+                    <label>所属区域</label>
+                    <textarea rows="2" id="fssqy" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>提报日期</label>
-                    <textarea rows="2" id="ftbrq" readonly></textarea>
+                    <label>申请日期</label>
+                    <textarea rows="2" id="fsqrq" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>订单编号</label>
-                    <textarea rows="2" id="fddbh" readonly></textarea>
+                    <label>联系电话</label>
+                    <textarea rows="2" id="flxdh" readonly></textarea>
                 </div>
             </div>
 
             <div class="mui-row cutOffLine padding">
-                <div class="mui-col-xs-4" style="display:flex;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>是否500元以上<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fif_500" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>客户编码</label>
+                    <textarea rows="2" id="fkhbm" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
                     <label>客户名称</label>
                     <textarea rows="2" id="fkhmc" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>要求交期</label>
-                    <textarea rows="2" id="fyqjq" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>订单类别</label>
-                    <textarea rows="2" id="fddlb" readonly></textarea>
                 </div>
             </div>
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-12" style="display:flex;">
-                    <label>客户要求</label>
-                    <textarea rows="2" id="fkhyq" readonly></textarea>
+                    <label>申请说明</label>
+                    <textarea rows="2" id="fsqsm" readonly></textarea>
                 </div>
             </div>
 
@@ -74,6 +74,30 @@
                     <div class="upload-img-list"></div>
                 </div>
             </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>申请明细</label>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计数量</label>
+                    <textarea rows="2" id="fsl_all" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计价格</label>
+                    <textarea rows="2" id="fjg_all" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计小计</label>
+                    <textarea rows="2" id="fxj_all" readonly></textarea>
+                </div>
+            </div>
+            <div id="mxlist">
+
+            </div>
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
+                添加申请明细
+                <span class="mui-icon mui-icon-plusempty"></span>
+            </a>
         </form>
 
         <div class="mui-table-view" style="margin-bottom:1rem;">
@@ -113,12 +137,12 @@
     <script type="text/javascript" src="common.js"></script>
     <script>
 
-        mui.init();
+         mui.init();
 
-        mui.ready(function () {
-            _init._preAskOrDone();
+         mui.ready(function () {
+             _init._preAskOrDone();
 
-        });
+         });
     </script>
 </body>
 </html>
