--- a/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowCreate.html
@@ -5,57 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
     <link rel="stylesheet" href="../../../../Content/mui.min.css" />
     <link rel="stylesheet" href="../../../../Content/mui.picker.min.css" />
     <link rel="stylesheet" href="../../../../Content/mui.poppicker.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.indexedlist.css" />
     <link rel="stylesheet" href="../../../../Content/upload.css" />
     <link rel="stylesheet" href="../../../../Content/ApprovalUtils.css" />
-    <link rel="stylesheet" href="../../../../Content/DoneOrMyApproval.css" />
-    <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
-
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>提报人</label>
-                    <textarea rows="2" id="ftbr" readonly></textarea>
+                    <label>申请人</label>
+                    <textarea rows="2" id="fsqr" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>订单类型</label>
-                    <textarea rows="2" id="fddlx" readonly></textarea>
+                    <label>所属区域</label>
+                    <textarea rows="2" id="fssqy" placeholder="请填写"></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>提报日期</label>
-                    <textarea rows="2" id="ftbrq" readonly></textarea>
+                    <label>申请日期</label>
+                    <textarea rows="2" id="fsqrq" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>订单编号</label>
-                    <textarea rows="2" id="fddbh" readonly></textarea>
+                    <label>联系电话</label>
+                    <textarea rows="2" id="flxdh" placeholder="请填写"></textarea>
                 </div>
             </div>
 
             <div class="mui-row cutOffLine padding">
-                <div class="mui-col-xs-4" style="display:flex;">
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>是否500元以上<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fif_500" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>客户编码</label>
+                    <textarea rows="2" id="fkhbm" placeholder="请填写"></textarea>
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
                     <label>客户名称</label>
-                    <textarea rows="2" id="fkhmc" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>要求交期</label>
-                    <textarea rows="2" id="fyqjq" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-4" style="display:flex;">
-                    <label>订单类别</label>
-                    <textarea rows="2" id="fddlb" readonly></textarea>
+                    <textarea rows="2" id="fkhmc" placeholder="请填写"></textarea>
                 </div>
             </div>
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-12" style="display:flex;">
-                    <label>客户要求</label>
-                    <textarea rows="2" id="fkhyq" readonly></textarea>
+                    <label>申请说明</label>
+                    <textarea rows="2" id="fsqsm" placeholder="请填写"></textarea>
                 </div>
             </div>
 
@@ -66,7 +65,7 @@
                         <label class="label">附件</label>
                         <span class="tips" id="imageCount"><!--已添加0张--></span>
                         <!--上传图片按钮  -->
-                        <span class="upload-addbtn" style="display:none;">
+                        <span class="upload-addbtn">
                             <input type="file" accept="image/jpeg,image/jpg,image/png,image/jp2,image/bmp" id="file" style="opacity:0;">
                         </span>
 
@@ -74,51 +73,63 @@
                     <div class="upload-img-list"></div>
                 </div>
             </div>
-        </form>
-
-        <div class="mui-table-view" style="margin-bottom:1rem;">
-            <div class="mui-table-view-cell  mui-collapse mui-active">
-                <a class="mui-navigate-right" href="#" style="background-color:#00a0ea;color:white;font-size:0.75rem;">
-                    历史签核意见
-                </a>
-                <div class="mui-collapse-content">
-                    <!--流程列表-->
-                    <div class="list">
-                        <ul id="signff"></ul>
-                    </div>
-
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>申请明细</label>
+            </div>
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计数量</label>
+                    <textarea rows="2" id="fsl_all" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计价格</label>
+                    <textarea rows="2" id="fjg_all" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>总计小计</label>
+                    <textarea rows="2" id="fxj_all" readonly></textarea>
                 </div>
             </div>
+            <div id="mxlist">
+
+            </div>
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;">
+                添加申请明细
+                <span class="mui-icon mui-icon-plusempty"></span>
+            </a>
+
+        </form>
+        <div class="mui-btn-row" id="SaveD">
+            <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
         </div>
     </div>
-    <input value="" id="stepId" name="stepId" type="hidden" />
-    <input type="hidden" id="flowPerId" name="flowPerId" value="" />
-    <input type="hidden" id="processName" name="processName" value="" />
-    <input type="hidden" id="noticePer" name="noticePer" value="" />
-    <input type="hidden" id="taskId" name="taskId" value="" />
-
 
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
-    <!--<script src="http://yun.kingdee.com/res/js/qingjs.js"></script>-->
     <script type="text/javascript" src="http://wb.weigaoholding.com:8090/res/js/qingjs.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.poppicker.js"></script>
     <script type="text/javascript" src="../../../../Scripts/mui.picker.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.indexedlist.js"></script>
     <script type="text/javascript" src="../../../../Scripts/ApprovalUtils.js"></script>
     <script type="text/javascript" src="../../../../Scripts/util.js"></script>
-    <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/uploadOpt.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="common.js?111"></script>
     <script>
+        //var vconsole = new VConsole();
 
         mui.init();
 
         mui.ready(function () {
-            _init._preAskOrDone();
+
+            getVersion('\\03医用制品集团\\05富森医用材料公司\\13_市场营销', '爱普公司样品申请');
+            getBPMParam();
+            _init._preCreate();
 
         });
+
     </script>
 </body>
 </html>
