--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/CW0209005/FlowDoneDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/CW0209005/FlowDoneDetail.html
@@ -105,6 +105,7 @@
             <input type="hidden" id="fspr" placeholder="总经理" />
             <input type="hidden" id="ps" placeholder="PS岗位" />
             <input type="hidden" id="fsqrzw" placeholder="申请人职位" />
+            <input type="hidden" id="flczt" placeholder="流程状态" />
         </form>
 
         <div class="mui-table-view" style="margin-bottom:1rem;">
