--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SCYX0209001/FlowAskDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SCYX0209001/FlowAskDetail.html
@@ -41,7 +41,7 @@
                 <label for="销售组织名称">销售组织<i style="color:red;">*</i></label>
                 <input type="text" id="销售组织名称" name="销售组织名称" data-fno="" placeholder="请选择销售组织" readonly="readonly"/>
             </div>
-            <div class="mui-input-row">
+            <div class="mui-input-row" style="display: none">
                 <label for="区域经理">区域经理<i style="color:red;">*</i></label>
                 <input type="text" id="区域经理" name="区域经理" data-fno="" placeholder="请选择区域经理" readonly="readonly"/>
             </div>
