更新文件_180716_调整洁丽康流程

--- a/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204001/FlowCreate.html
@@ -39,7 +39,7 @@
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>是否500元以上<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fif_500" readonly></textarea>
+                    <textarea rows="2" id="fif_500" readonly>否</textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>客户编码</label>
@@ -79,15 +79,15 @@
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>总计数量</label>
-                    <textarea rows="2" id="fsl_all" readonly></textarea>
+                    <textarea rows="2" id="fsl_all" readonly>0</textarea>
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>总计价格</label>
-                    <textarea rows="2" id="fjg_all" readonly></textarea>
+                    <textarea rows="2" id="fjg_all" readonly>0</textarea>
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>总计小计</label>
-                    <textarea rows="2" id="fxj_all" readonly></textarea>
+                    <textarea rows="2" id="fxj_all" readonly>0</textarea>
                 </div>
             </div>
             <div id="mxlist">
