--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209001/FlowCreate.html
@@ -35,7 +35,7 @@
             </div>
             <div class="mui-input-row">
                 <label>日报日期</label>
-                <input type="text" id="fdate" readonly />
+                <input type="text" id="fdate1" readonly />
             </div>
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>日报信息</label>
