--- a/BPMMobile/Pages/00KCY/YF0017004/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/YF0017004/FlowCreate.html
@@ -259,7 +259,7 @@
     <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="common.js?11"></script>
     <script>
 
         //var vconsole = new VConsole();
