fixed_0720_修复爱普公司流程_添加爱普公司新流程

--- a/BPMMobile/Pages/00KCY/YF0017004/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/YF0017004/FlowCreate.html
@@ -28,7 +28,7 @@
                     <label>联系电话<i style="color:red;">*</i></label>
                     <textarea rows="2" id="flxdh" placeholder="请填写"></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
+                <div class="mui-col-xs-3" style="display:none;">
                     <label>邮箱<i style="color:red;">*</i></label>
                     <textarea rows="2" id="femail" placeholder="请填写"></textarea>
                 </div>
