--- a/BPMMobile/Pages/00KCY/YF0017004/FlowAskDetail.html
+++ b/BPMMobile/Pages/00KCY/YF0017004/FlowAskDetail.html
@@ -28,7 +28,7 @@
                     <label>联系电话<i style="color:red;">*</i></label>
                     <textarea rows="2" id="flxdh" readonly></textarea>
                 </div>
-                <div class="mui-col-xs-3" style="display:flex;">
+                <div class="mui-col-xs-3" style="display:none;">
                     <label>邮箱<i style="color:red;">*</i></label>
                     <textarea rows="2" id="femail" readonly></textarea>
                 </div>
