--- a/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204006/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204006/FlowCreate.html
@@ -15,22 +15,24 @@
     <title></title>
 </head>
 <body>
-
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+
             <div class="mui-row cutOffLine padding">
-                <div class="mui-col-xs-6" style="display:flex;">
+                <div class="mui-col-xs-3" style="display:flex;">
                     <label>申请人</label>
                     <textarea rows="2" id="fsqr" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>所属区域</label>
+                    <textarea rows="2" id="fssqy" placeholder="请填写"></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>申请日期</label>
                     <textarea rows="2" id="fsqrq" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>
-                        联系方式<i style="color:red;">*</i>
-                    </label>
+                    <label>联系方式<i style="color:red;">*</i></label>
                     <textarea rows="2" id="flxfs" placeholder="请填写"></textarea>
                 </div>
             </div>
@@ -52,7 +54,7 @@
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>授信期(天)</label>
+                    <label>授信期(天)<i style="color:red;">*</i></label>
                     <input type="number" id="fsxq" placeholder="请填写" />
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
@@ -65,13 +67,23 @@
                 </div>
             </div>
 
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>申请类型</label>
+                    <textarea rows="2" id="fsqlx" placeholder="请填写"></textarea>
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>申请级别<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsqjb" readonly placeholder="请选择"></textarea>
+                </div>
+
+            </div>
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-12" style="display:flex;">
-                    <label>申请理由<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fsqly" placeholder="请填写"></textarea>
+                    <label>申请内容<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsqnr" placeholder="请填写"></textarea>
                 </div>
-
             </div>
 
             <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
@@ -91,64 +103,6 @@
             </div>
 
 
-
-            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
-                <label>申请明细</label>
-            </div>
-
-            <div class="mui-row cutOffLine padding">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>销售单价(总计)</label>
-                    <textarea rows="2" id="fxsdj_total" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>核算业务费底价(总计)</label>
-                    <textarea rows="2" id="fywf_total" readonly></textarea>
-                </div>
-            </div>
-
-
-            <div id="mxlist">
-                <div id="mx" class="mui-card">
-                    <div class="mui-input-row itemtitle">
-                        <label>明细列表项</label>
-                        <span class="mui-icon mui-icon-close mui-pull-right" style="margin-right:0.6rem;border-width:0.1rem;border-radius:1.2rem;margin-top:0.2rem;" id="deleteProduct" onclick="deleteItem(this)"></span>
-                    </div>
-                    <div class="mui-row cutOffLine padding">
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>产品编码</label>
-                            <textarea rows="2" id="fcpbm" placeholder="请填写"></textarea>
-                        </div>
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>产品名称</label>
-                            <textarea rows="2" id="fcpmc" placeholder="请填写"></textarea>
-                        </div>
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>规格型号</label>
-                            <textarea rows="2" id="fggxh" placeholder="请填写"></textarea>
-                        </div>
-                    </div>
-
-                    <div class="mui-row cutOffLine padding">
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>销售单价</label>
-                            <input type="number" id="fxsdj" placeholder="请填写" />
-                        </div>
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>核算业务费底价</label>
-                            <input type="number" id="fwyf" placeholder="请填写" />
-                        </div>
-                        <div class="mui-col-xs-4" style="display:flex;">
-                            <label>备注说明</label>
-                            <textarea rows="2" id="fbz" placeholder="请填写"></textarea>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;">
-                添加申请明细
-                <span class="mui-icon mui-icon-plusempty"></span>
-            </a>
 
         </form>
         <div class="mui-btn-row" id="SaveD">
@@ -176,7 +130,7 @@
 
         mui.ready(function () {
 
-            getVersion('\\03医用制品集团\\05富森医用材料公司\\13_市场营销', '爱普公司业务费特批申请');
+            getVersion('\\03医用制品集团\\05富森医用材料公司\\13_市场营销', '爱普公司销售管理事务申请');
             getBPMParam();
             _init._preCreate();
 
