--- a/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204006/FlowUndoDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/04HaiShengSheBei/APSC0204006/FlowUndoDetail.html
@@ -17,19 +17,23 @@
 <body>
     <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
         <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+
+
             <div class="mui-row cutOffLine padding">
-                <div class="mui-col-xs-6" style="display:flex;">
+                <div class="mui-col-xs-3" style="display:flex;">
                     <label>申请人</label>
                     <textarea rows="2" id="fsqr" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-3" style="display:flex;">
+                    <label>所属区域</label>
+                    <textarea rows="2" id="fssqy" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>申请日期</label>
                     <textarea rows="2" id="fsqrq" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>
-                        联系方式<i style="color:red;">*</i>
-                    </label>
+                    <label>联系方式<i style="color:red;">*</i></label>
                     <textarea rows="2" id="flxfs" readonly></textarea>
                 </div>
             </div>
@@ -51,7 +55,7 @@
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-3" style="display:flex;">
-                    <label>授信期(天)</label>
+                    <label>授信期(天)<i style="color:red;">*</i></label>
                     <input type="number" id="fsxq" readonly/>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
@@ -64,13 +68,23 @@
                 </div>
             </div>
 
+            <div class="mui-row cutOffLine padding">
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>申请类型</label>
+                    <textarea rows="2" id="fsqlx" readonly></textarea>
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>申请级别<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fsqjb" readonly ></textarea>
+                </div>
+
+            </div>
 
             <div class="mui-row cutOffLine padding">
                 <div class="mui-col-xs-12" style="display:flex;">
-                    <label>申请理由<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fsqly" readonly></textarea>
+                    <label>申请内容</label>
+                    <textarea rows="2" id="fsqnr" readonly></textarea>
                 </div>
-
             </div>
 
             <div class="mui-input-row" style="height:7rem;overflow:scroll;" id="uploaddiv">
@@ -88,33 +102,6 @@
                     <div class="upload-img-list"></div>
                 </div>
             </div>
-
-
-
-            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
-                <label>申请明细</label>
-            </div>
-
-            <div class="mui-row cutOffLine padding">
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>销售单价(总计)</label>
-                    <textarea rows="2" id="fxsdj_total" readonly></textarea>
-                </div>
-                <div class="mui-col-xs-6" style="display:flex;">
-                    <label>核算业务费底价(总计)</label>
-                    <textarea rows="2" id="fywf_total" readonly></textarea>
-                </div>
-            </div>
-
-
-            <div id="mxlist">
-               
-            </div>
-            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
-                添加申请明细
-                <span class="mui-icon mui-icon-plusempty"></span>
-            </a>
-
             <div class="mui-input-row" id="csd">
                 <label>加签</label>
                 <div class="mui-switch mui-switch-blue" id="csswitch">
