--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/CW0209003/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/CW0209003/FlowCreate.html
@@ -63,7 +63,7 @@
                 <div class="mui-row cutOffLine padding">
                     <div class="mui-col-xs-12" style="display:flex;">
                         <label>借款用途</label>
-                        <textarea rows="2" id="fjkyt" placeholder="请填写"></textarea>
+                        <textarea rows="2" id="fjkyt" placeholder="请填写">差旅费借款</textarea>
                     </div>
                 </div>
             </div>
